VWDemo/force-app/main/default/objects/Asset/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Asset Number</label>
    <type>AutoNumber</type>
</CustomField>