VWDemo/force-app/main/default/objects/Asset/fields/Has_subscription__c.field-meta.xml
<CustomField>
    <fullName>Has_subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has subscription</label>
    <type>Checkbox</type>
</CustomField>