VWDemo/force-app/main/default/objects/Asset/fields/Model_Range__c.field-meta.xml
<CustomField>
    <fullName>Model_Range__c</fullName>
    <label>Model Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>