VWDemo/force-app/main/default/objects/Asset/fields/Subscription_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Percentage__c</fullName>
    <label>Subscription Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>