VWDemo/force-app/main/default/objects/Asset/fields/Vehicle_number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_number__c</fullName>
    <label>Vehicle number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>